--- a/app/assets/stylesheets/pictures.scss
+++ b/app/assets/stylesheets/pictures.scss
@@ -1,3 +1,112 @@
 // Place all the styles related to the pictures controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+body {
+  background-color: rgb(206, 171, 171);
+}
+
+.insta_body {
+  text-align: center;
+}
+
+header {
+  background-color: rgb(122, 126, 168);
+  height: 77px;
+  border: solid 1px #E6E6E6;
+  width: 100%;
+  padding-left: 10px;
+}
+
+header .logo {
+  padding-top:10px ;
+}
+
+.header_right {
+  float: right;
+  padding-top: 30px;
+  margin-right: 50px;
+  font-size: 18px;
+  text-decoration: none;
+}
+
+.header_right:hover {
+  text-decoration: none;
+}
+
+.contents_image2 {
+  display: inline-block;
+  width: 935px;
+  margin-top: 30px;
+}
+
+.contents_image3 {
+  display: inline-block;
+  width:935px;
+}
+
+.prof {
+  margin: 60px 300px 60px 0;
+  border-radius: 50% !important
+}
+
+.contentprof {
+  display: inline-block;
+  width: 935px;
+  border-bottom: solid 1px #E6E6E6;
+  font-size: 30px
+}
+
+.igcontent {
+  display: inline-block;
+  width: 935px;
+}
+
+.igcontent_text {
+  text-align: left;
+}
+
+.igcontent_info {
+  font-weight: bold;
+}
+
+.btn-group {
+  margin-bottom: 10px;
+}
+
+.profile_top, .favorites_top {
+  margin:20px 0;
+}
+
+footer {
+  background-color:rgb(122, 126, 168) ;
+  height: 77px;
+  border: solid 1px rgb(179, 185, 182);
+}
+
+footer ul {
+  list-style: none;
+  padding-top: 15px;
+}
+
+footer li {
+  text-align: center;
+}
+
+.contents_image3 {
+  width: 935px;
+  max-width: 250px;
+  margin:10px;
+  position: relative;
+}
+.contents_image3::before {
+  content: "";
+  display: block;
+  padding-top: 100%;
+}
+.contents_image3 img {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  object-fit: cover;
+}
