--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -24,6 +24,8 @@
   <%= f.label :password_confirmation %>
   <%= f.password_field :password_confirmation %>
 
-
+<br>
+<div class= "create">
   <%= f.submit "Create my account" %>
+</div>
 <% end %>
