--- a/app/views/pictures/_form.html.erb
+++ b/app/views/pictures/_form.html.erb
@@ -1,32 +1,23 @@
-<%= form_with(model: picture, local: true) do |form| %>
-  <% if picture.errors.any? %>
+<div class="igsignup">
+<%= form_with(model: @picture, local: true ,url: choose_new_or_edit ) do |form| %>
+  <% if @picture.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(picture.errors.count, "error") %> prohibited this picture from being saved:</h2>
-
+      <h2><%= @picture.errors.count %>件のエラーがあります。 </h2>
       <ul>
-      <% picture.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
+        <% @picture.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+        <% end %>
       </ul>
     </div>
   <% end %>
-
-  <div class="field">
+  <div class="picture_image">
     <%= form.label :image %>
-    <%= form.text_area :image %>
+    <%= form.file_field :image %>
   </div>
-
-  <div class="field">
-    <%= form.label :content %>
+  <div class="picture_content">
+    <br>
     <%= form.text_area :content %>
-  </div>
-
-  <div class="field">
-    <%= form.label :user_id %>
-    <%= form.text_field :user_id %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit %>
+    <p class="picture_submit"><%= form.submit %></p>
   </div>
 <% end %>
+</div>
