--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -1,31 +1,32 @@
-<p id="notice"><%= notice %></p>
+<% @pictures.reverse_each do |picture| %>
+<div class="igcontent">
+  <div class="igcontent_text">
+    <div class="igcontent_info">
+      <p id="igcontent_name"><%= picture.user.name %></p>
+      <p id="igcontent_time"><%= picture.created_at %></p>
+    </div>
+    <%= picture.content %><br>
+  </div>
+  <%= image_tag picture.image.url, width: 720 %><br>
+  <div class="btn-group" role="group" aria-label="...">
+    <table>
+      <td><%= link_to "Details", picture_path(picture.id), class: "btn btn-default" %></td>
 
-<h1>Pictures</h1>
+      <% if picture.user_id == session[:user_id] %>
+        <td><%= link_to "Edit", edit_picture_path(picture.id), class: "btn btn-default", data: { confirm: '本当に編集しますか？' } %></td>
+        <td><%= link_to 'Delete', picture_path(picture.id), class: "btn btn-default", method: :delete, data: { confirm: '本当に削除しますか？' } %></td>
+      <% end %>
 
-<table>
-  <thead>
-    <tr>
-      <th>Image</th>
-      <th>Content</th>
-      <th>User</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @pictures.each do |picture| %>
-      <tr>
-        <td><%= picture.image %></td>
-        <td><%= picture.content %></td>
-        <td><%= picture.user %></td>
-        <td><%= link_to 'Show', picture %></td>
-        <td><%= link_to 'Edit', edit_picture_path(picture) %></td>
-        <td><%= link_to 'Destroy', picture, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Picture', new_picture_path %>
+      <% @favorite = current_user.favorites.find_by(picture_id: picture.id) %>
+      <% if picture.user_id == current_user.id %>
+        <% if @favorite.present? %>
+          <td><%= link_to 'Cancel favorite', favorite_path(id: @favorite.id), method: :delete, class: 'btn btn-default' %></td>
+        <% else %>
+          <td><%= link_to 'Favorite', favorites_path(picture_id: picture.id), method: :post, class: 'btn btn-primary' %></td>
+        <% end %>
+      <% end %>
+    </table>
+  </div>
+</div>
+<br><br>
+<% end %>
