--- a/app/views/pictures/show.html.erb
+++ b/app/views/pictures/show.html.erb
@@ -1,19 +1,29 @@
-<p id="notice"><%= notice %></p>
+<div class="igcontent">
+  <div class="igcontent_text">
+    <div class="igcontent_info">
+      <p id="igcontent_name"><%= @picture.user.name %></p>
+      <p id="igcontent_time"><%= @picture.created_at %></p>
+    </div>
+    <%= @picture.content %>
+    <br>
+    <div class="btn-group" role="group" aria-label="...">
+      <table>
 
-<p>
-  <strong>Image:</strong>
-  <%= @picture.image %>
-</p>
+        <% if @picture.user_id == session[:user_id] %>
+          <td><%= link_to "Edit", edit_picture_path(@picture.id), class: "btn btn-link", data: { confirm: '本当に編集しますか？' } %>/</td>
+          <td><%= link_to 'Delete', picture_path(@picture.id), class: "btn btn-link", method: :delete, data: { confirm: '本当に削除しますか？' } %>/</td>
+        <% end %>
 
-<p>
-  <strong>Content:</strong>
-  <%= @picture.content %>
-</p>
+        <% @favorite = current_user.favorites.find_by(picture_id: @picture.id) %>
 
-<p>
-  <strong>User:</strong>
-  <%= @picture.user %>
-</p>
+          <% if @favorite.present? %>
+            <td><%= link_to 'Cancel favorite', favorite_path(id: @favorite.id), method: :delete, class: 'btn link' %></td>
+          <% else %>
+            <td><%= link_to 'Favorite', favorites_path(picture_id: @picture.id), method: :post, class: 'btn link' %></td>
+          <% end %>
 
-<%= link_to 'Edit', edit_picture_path(@picture) %> |
-<%= link_to 'Back', pictures_path %>
+      </table>
+    </div>
+  </div>
+  <%= image_tag @picture.image.url %><br><br><br>
+</div>
