added some things

--- a/app/views/favorites/show.html.erb
+++ b/app/views/favorites/show.html.erb
@@ -8,4 +8,4 @@
 </tr>
 
 <br>
-  <%= link_to "back", picutre_path, class:"btn btn-link" %>
+  <%= link_to "back", picutres_path, class:"btn btn-link" %>
