--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -10,19 +10,19 @@
   <%= image_tag picture.image.url, width: 720 %><br>
   <div class="btn-group" role="group" aria-label="...">
     <table>
-      <td><%= link_to "Details", picture_path(picture.id), class: "btn btn-default" %></td>
+      <td><%= link_to "詳細", picture_path(picture.id), class: "btn btn-primary" %></td>
 
       <% if picture.user_id == session[:user_id] %>
-        <td><%= link_to "Edit", edit_picture_path(picture.id), class: "btn btn-default", data: { confirm: '本当に編集しますか？' } %></td>
-        <td><%= link_to 'Delete', picture_path(picture.id), class: "btn btn-default", method: :delete, data: { confirm: '本当に削除しますか？' } %></td>
+        <td><%= link_to "編集", edit_picture_path(picture.id), class: "btn btn-primary", data: { confirm: '本当に編集しますか？' } %></td>
+        <td><%= link_to '削除', picture_path(picture.id), class: "btn btn-primary", method: :delete, data: { confirm: '本当に削除しますか？' } %></td>
       <% end %>
 
       <% @favorite = current_user.favorites.find_by(picture_id: picture.id) %>
       <% if picture.user_id == current_user.id %>
         <% if @favorite.present? %>
-          <td><%= link_to 'Cancel favorite', favorite_path(id: @favorite.id), method: :delete, class: 'btn btn-default' %></td>
+          <td><%= link_to 'お気に入り削除', favorite_path(id: @favorite.id), method: :delete, class: "btn btn-primary" %></td>
         <% else %>
-          <td><%= link_to 'Favorite', favorites_path(picture_id: picture.id), method: :post, class: 'btn btn-primary' %></td>
+          <td><%= link_to 'お気に入り登録', favorites_path(picture_id: picture.id), method: :post, class: "btn btn-primary" %></td>
         <% end %>
       <% end %>
     </table>
